--- a/src/index.css
+++ b/src/index.css
@@ -33,6 +33,7 @@ input {
   border-radius: 5px;
   outline: none;
   margin-right: 10px;
+  margin-left: 10px;
   border: 1px solid #dddddd;
 }
 button {
